fixed footer CSS not showing and refresh session after every request

--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -17,6 +17,19 @@ header {
     text-align: center;
 }
 
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    line-height: 40px;
+    width: 100%;
+    text-align: center;
+    box-shadow: 0px -5px 5px rgb(73, 73, 73);
+    background-color: rgb(149, 149, 149);
+    border-radius: 5px;
+    font-family: monospace;
+}
 
 #nav-project-name {
     font-size: 30px;
